# python-scripts-for-iOS

./: .gitignore  LICENSE  Pipfile  README.md  nhenatai_net-dl.py  pyproject.toml  test.py  videodl.py
GetTrainFee/: GetTrainFee.py  temp_交通費計算.xlsx  交通費計算.xlsx
dl-FRIENDS-subtitle/: HtmlEditor.py  HtmlParser.py  RunHttpServer.py  main.py  res.pickle  runflask.py
dl-FRIENDS-subtitle/temp_data/: 388471106.pickle  388471107.pickle  388471108.pickle  388471109.pickle  388471110.pickle  388471112.pickle  388471113.pickle  388471115.pickle  388471116.pickle  388471117.pickle  388471118.pickle  388471119.pickle  388471120.pickle  388471121.pickle  388471122.pickle  388471123.pickle  388471124.pickle  388471125.pickle  388471126.pickle  388471127.pickle  388471128.pickle  388471129.pickle  388471130.pickle  388471131.pickle  388471132.pickle  388471133.pickle  388471134.pickle  388471135.pickle  388471136.pickle  388471137.pickle  388471138.pickle  388471139.pickle  388471140.pickle  388471142.pickle  388471143.pickle  388471144.pickle  388471145.pickle  388471146.pickle  388471147.pickle  388471148.pickle  (+38 more)
dl-FRIENDS-subtitle/templates/: index.html
dl-FRIENDS-subtitle/templates/article/season3/: 3_11.html  3_12.html  3_13.html  3_14.html  3_15.html  3_16.html  3_17.html  3_18.html  3_19.html  3_20.html  3_21.html  3_22.html  3_23.html  3_24.html  3_25.html
dl-FRIENDS-subtitle/templates/assets/css/: main.css
dl-FRIENDS-subtitle/templates/backup/: index.html
dl-FRIENDS-subtitle/templates/original/: episode_template.html  index_template.html
nhentai_net-dl/: nhentai_net-dl.py
video-dl/: ConvertTTML2TXT.py  ConvertVTT2SRT.py  FilePicker.py  FilePickerPyto.py  MergeSRT.py  mergeSRT.py  video-dl.py  vtt2srtConv.py
(+15 files in other folders)
