[tool.poetry]
name = "python-scripts-for-ios"
version = "0.1.0"
description = ""
authors = ["sato1214syun <sato1214syun@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.64.0"
beautifulsoup4 = "^4.11.1"
lxml = "^4.8.0"
urllib3 = "^1.26.9"
NHentai-API = "^0.0.19"
pysrt = "^1.1.2"
vtt-to-srt3 = "^0.1.9.0"
pyperclip = "^1.8.2"
yt-dlp = "^2022.4.8"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.941"
black = "^22.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
