[tool.poetry]
name = "python-scripts-for-ios"
version = "0.1.0"
description = ""
authors = ["sato1214syun <sato1214syun@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.64.1"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.2"
urllib3 = "^1.26.13"
NHentai-API = "^0.0.19"
pysrt = "^1.1.2"
vtt-to-srt3 = "^0.1.9.2"
pyperclip = "^1.8.2"
yt-dlp = "^2023.01.06"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
