[project]
name = "python-scripts-for-ios"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "sato1214syun", email = "sato1214syun@gmail.com" }
]
dependencies = ["tqdm~=4.65.0", "beautifulsoup4~=4.12.2", "lxml~=4.9.2", "urllib3~=1.26.13", "pysrt~=1.1.2", "vtt-to-srt3~=0.2.0.1", "pyperclip~=1.8.2", "yt-dlp~=2023.3.4", "requests~=2.31.0", "nhentai~=0.5.3"]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
[tool.hatch.metadata]
allow-direct-references = true
